# website

./: .gitattributes  .gitignore  .versionrc.json  Cargo.toml  README.md  README.mdx  README.zh.md  README.zh.mdx  SalvoCargo.toml  config.toml  i18n.json  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  rspress.config.ts  rstest.browser.config.mts  rstest.config.mjs  theme.toml  tsconfig.json  zh-hant.js
.github/workflows/: ci.yml  format.yml  linux.yml
.vuepress/: config.ts
.vuepress/public/: manifest.webmanifest
archetypes/: book.md
assets/js/: index.js
assets/scss/: app.scss
book/: guide.md
book/core/: catcher.md  depot.md  handler.md  response.md  router.md  testing.md
book/middlewares/: affix.md  basic-auth.md  cache.md  caching-headers.md  compression.md  cors.md  csrf.md  flash.md  jwt-auth.md  logging.md  proxy.md  rate-limiter.md  serve-static.md  session.md  size-limiter.md  sse.md  timeout.md  trailing-slash.md  ws.md
book/topics/: file-upload.md  use-template-engine.md  working-with-database.md
codes/: Cargo.toml
codes/affix/: Cargo.toml
codes/affix-state/: Cargo.toml
codes/basic-auth/: Cargo.toml
codes/cache-simple/: Cargo.toml
codes/caching-headers/: Cargo.toml
codes/compression/: Cargo.toml
codes/cors/: Cargo.toml
codes/csrf-cookie-store/: Cargo.toml
codes/csrf-session-store/: Cargo.toml
codes/csrf-session-store/src/: main.rs
codes/custom-error-page/: Cargo.toml
codes/custom-filter/: Cargo.toml
codes/db-mongodb/: Cargo.toml
codes/db-mysql-rbatis/: Cargo.toml
codes/db-sea-orm/: Cargo.toml
codes/extract-data/: Cargo.toml
codes/extract-nested/: Cargo.toml
codes/extract-with-lifetimes/: Cargo.toml
codes/flash-cookie-store/: Cargo.toml
codes/flash-session-store/: Cargo.toml
codes/graceful-shutdown/: Cargo.toml
codes/handle-error/: Cargo.toml
codes/hello/: Cargo.toml
codes/hello-h3/: Cargo.toml
codes/join-listeners/: Cargo.toml
codes/jwt-auth/: Cargo.toml
codes/jwt-oidc-clerk/: Cargo.toml
codes/logging/: Cargo.toml
codes/middleware-add-header/: Cargo.toml
codes/multi-servers/: Cargo.toml
codes/oapi-generics/: Cargo.toml
codes/oapi-generics/src/: main.rs
codes/oapi-hello/: Cargo.toml
codes/oapi-oauth2-password/: Cargo.toml
codes/oapi-oauth2-password/src/: main.rs
codes/oapi-todos/: Cargo.toml
codes/otel-jaeger/: Cargo.toml
codes/postgres-sqlx/: Cargo.toml
codes/proxy-simple/: Cargo.toml
codes/proxy-websocket/: Cargo.toml
codes/rate-limiter-dynamic/: Cargo.toml
codes/rate-limiter-static/: Cargo.toml
codes/remote-addr/: Cargo.toml
codes/routing/: Cargo.toml
codes/routing-guid/: Cargo.toml
codes/session-login/: Cargo.toml
codes/size-limiter/: Cargo.toml
codes/sse/: Cargo.toml
codes/sse-chat/: Cargo.toml
codes/static-dir-list/: Cargo.toml
codes/static-embed-file/: Cargo.toml
codes/static-embed-files/: Cargo.toml
codes/template-askama/: Cargo.toml
codes/tls-native-tls/: Cargo.toml
codes/tls-native-tls-reload/: Cargo.toml
codes/tls-openssl/: Cargo.toml
codes/tls-openssl-reload/: Cargo.toml
codes/tls-rustls/: Cargo.toml
codes/tls-rustls-reload/: Cargo.toml
codes/todos/: Cargo.toml
codes/upload-file/: Cargo.toml
codes/upload-files/: Cargo.toml
codes/use-depot/: Cargo.toml
codes/websocket/: Cargo.toml
codes/websocket-chat/: Cargo.toml
codes/ws/: Cargo.toml
codes/ws-chat/: Cargo.toml
codes_md/: Cargo.mdx
codes_md/acme-http01/: Cargo.mdx
codes_md/acme-http01-quinn/: Cargo.mdx
codes_md/acme-tls-alpn01/: Cargo.mdx
codes_md/affix-state/: Cargo.mdx
codes_md/basic-auth/: Cargo.mdx
codes_md/body-channel/: Cargo.mdx
codes_md/cache-simple/: Cargo.mdx
codes_md/caching-headers/: Cargo.mdx
codes_md/catch-error/: Cargo.mdx
codes_md/catch-panic/: Cargo.mdx
codes_md/compression/: Cargo.mdx
codes_md/concurrency-limiter/: Cargo.mdx
codes_md/cors/: Cargo.mdx
codes_md/craft/: Cargo.mdx
codes_md/csrf-cookie-store/: Cargo.mdx
config/: postcss.config.js
data/: salvo.json
docs/: README.md  _meta.json
src/: README.md  donate.md
static/: site.webmanifest
test/: Counter.test.tsx  Counter.tsx  main.test.ts  main.ts
utils/: files2md.js  gen_code_md.js  generate-book.js  md2mdx.js  translate.js  translation_tool.js
zh-hans/: README.md
zh-hant/: README.md
(+1569 files in other folders)
