[workspace]
members = ["codes/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Chrislearn Young <chrislearn@hotmail.com>"]
edition = "2021"
publish = false
rust-version = "1.64"
description = """
Salvo is a powerful and simple Rust web server framework.
"""

[workspace.dependencies]
anyhow = "1"
rbatis = "4.3"
rbdc = "4.3"
rbdc-mysql = "4.3"
rbs = "4.3"
async-std = "1.12"
async-trait = "0.1"
sea-orm = "0.12"
sea-orm-migration = "0.12"
eyre = "0.6"
tera = "1.3"
futures = "0.3"
opentelemetry = "0.20"
opentelemetry-http = "0.9"
opentelemetry-jaeger = "0.19"
opentelemetry-prometheus = "0.13"
utoipa = "3.3.0"
utoipa-swagger-ui = "*"
tokio-stream = "0.1.14"
async-stream = "0.3.5"
futures-util = { version = "0.3", default-features = true }
jsonwebtoken = "8"
once_cell = "1"
parking_lot = "0.12"
salvo = { version = "0.57", default-features = false }
serde = "1"
serde_json = "1"
thiserror = "1"
tokio = "1"
tracing-subscriber = { version = "0.3" }
tracing = "0.1"
tracing-test = "0.2.1"
url = "2"
chrono = "0.4"
sqlx = "0.7"
rust-embed = "8"
time = "0.3"
