[workspace]
members = ["codes/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Chrislearn Young <chrislearn@hotmail.com>"]
edition = "2021"
publish = false
rust-version = "1.80"
description = """
Salvo is a powerful and simple Rust web server framework.
"""

[workspace.dependencies]
anyhow = "1"
rbatis = "4.5"
rbdc = "4.5"
rbdc-mysql = "4.5"
rbs = "4.5"
async-std = "1.12"
async-trait = "0.1"
sea-orm = "1"
sea-orm-migration = "1"
eyre = "0.6"
tera = "1.3"
futures = "0.3"

opentelemetry = "0.27.0"
opentelemetry-http = "0.27.0"
opentelemetry-otlp = "0.27.0"
opentelemetry-prometheus = "0.17.0"
opentelemetry_sdk = "0.27.0"
opentelemetry-semantic-conventions = "0.27.0"
tracing-opentelemetry = "0.28.0"

tokio-stream = "0.1.14"
async-stream = "0.3.5"
futures-util = { version = "0.3", default-features = true }
jsonwebtoken = "9"
parking_lot = "0.12"
reqwest = "0.12"
salvo = { version = "0.75.0", git = "https://github.com/salvo-rs/salvo.git", branch="main", default-features = true }
serde = "1"
serde_json = "1"
thiserror = "2"
tokio = "1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
tracing-test = "0.2.1"
url = "2"
chrono = "0.4"
sqlx = "0.8"
rust-embed = "8"
time = "0.3"
