[package]
name = "example-csrf-session-store"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
salvo = { git = "https://github.com/salvo-rs/salvo.git" }
salvo-csrf = { git = "https://github.com/salvo-rs/salvo.git", default-features = false, features = ["session-store", "bcrypt-cipher"] }
salvo-session = { git = "https://github.com/salvo-rs/salvo.git" }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
