[package]
name = "example-oapi-generics"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
salvo = { workspace = true, features = ["oapi"] }
tokio = { workspace = true, features = ["macros"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
tracing.workspace = true
tracing-subscriber.workspace = true
