[package]
name = "example-oapi-oauth2-password"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
jsonwebtoken = { workspace = true }
salvo = { workspace = true, features = ["jwt-auth", "oapi"] }
serde = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tracing.workspace = true
tracing-subscriber.workspace = true
