[package]
name = "example-postgres-sqlx"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
salvo = { git = "https://github.com/salvo-rs/salvo.git" }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"